# Dusk-examples

./: CMakeLists.txt
Checkers/: CMakeLists.txt
Checkers/assets/config/Checkers/: app.json  game_scene.json
Checkers/assets/shaders/Checkers/: flat.fs.glsl  lighting.fs.glsl  lighting.vs.glsl
Checkers/src/: main.cpp
Cube/: CMakeLists.txt  app.json  app.lua  default.vs.glsl
Cube/assets/config/: Cube-example.json  Cube_example.json
Cube/assets/config/Cube/: app.json  default_scene.json
Cube/assets/scripts/: Cube-example.lua
Cube/assets/scripts/Cube/: rotate.lua
Cube/assets/shaders/: default.fs.glsl  default.vs.glsl
Cube/assets/shaders/Cube/: default.fs.glsl  default.vs.glsl
Cube/src/: main.cpp
Flocking/: CMakeLists.txt
Flocking/assets/config/Flocking/: app.json  default_scene.json
Flocking/assets/scripts/Flocking/: movement.lua  scene1_timer.lua  scene2_timer.lua
Flocking/assets/shaders/Flocking/: default.fs.glsl  default.vs.glsl
Flocking/src/: BoidActor.cpp  BoidActor.hpp  Common.hpp  Constants.hpp  FlockingComponent.cpp  FlockingComponent.hpp  Octant.hpp  main.cpp
HelloWorld/: CMakeLists.txt
HelloWorld/src/: Main.cpp
Lighting/: CMakeLists.txt
Lighting/assets/config/: Lighting_example.json
Lighting/assets/config/Lighting/: app.json  default_scene.json
Lighting/assets/scripts/: Lighting_example.lua
Lighting/assets/shaders/: Lighting_default.vs.glsl
Lighting/assets/shaders/Lighting/: default.fs.glsl
Lighting/src/: main.cpp
Noise/: CMakeLists.txt
Noise/assets/shaders/Noise/: default.fs.glsl  default.vs.glsl
Noise/src/: main.cpp
Textured/: CMakeLists.txt  Textured.duskproj
Textured/assets/config/: Textured_example.json
Textured/assets/config/Textured/: app.json  default_scene.json
Textured/assets/models/globe/: globe.mtl
Textured/assets/scripts/: Textured_example.lua  main.as
Textured/assets/scripts/Textured/: rotate.lua
Textured/assets/shaders/: Textured_default.fs.glsl  Textured_default.vs.glsl  textured.fs.glsl  textured.vs.glsl
Textured/assets/shaders/Textured/: default.fs.glsl  default.vs.glsl  textured.fs.glsl  textured.vs.glsl
Textured/data/: scn_globe.duskscene  scn_main.duskscene
Textured/src/: Textured.cpp  Textured.hpp  TexturedShader.cpp  TexturedShader.hpp  main.cpp
assets/shaders/data/: lighting.inc.glsl
